--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "vinyl-named": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.0",
+    "remodel": "0.0.4"
   }
 }
